// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Autocomplete /> opens dropdown menu when input value changes 1`] = `
<div
  className="talixo-combo-box__wrapper"
>
  <div
    className="talixo-text-input talixo-combo-box__input  talixo-text-input--empty"
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <input
      aria-activedescendant={null}
      aria-autocomplete="list"
      aria-expanded={false}
      autoComplete="off"
      className="talixo-text-input__input"
      id="downshift-1-input"
      onBlur={[Function]}
      onChange={[Function]}
      onKeyDown={[Function]}
      placeholder="Choose number"
      role="combobox"
      style={null}
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`<Autocomplete /> renders correctly 1`] = `
<div
  className="talixo-combo-box__wrapper"
>
  <div
    className="talixo-text-input talixo-combo-box__input  talixo-text-input--empty"
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <input
      aria-activedescendant={null}
      aria-autocomplete="list"
      aria-expanded={false}
      autoComplete="off"
      className="talixo-text-input__input"
      id="downshift-0-input"
      onBlur={[Function]}
      onChange={[Function]}
      onKeyDown={[Function]}
      role="combobox"
      style={null}
      type="text"
      value=""
    />
  </div>
</div>
`;
